tests/baselines/reference/parserComputedPropertyName40.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName40.ts(2,6): error TS2304: Cannot find name 'a'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName40.ts (1 errors) ====
    class C {
        [a ? "" : ""]() {}
         ~
!!! error TS2304: Cannot find name 'a'.
    }